<resources>
    <string name="app_name">CookBook</string>
    <string name="detail_button">Show Detail</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dish_name">Nazwa dania</string>
    <string name="dish_recipe">Opis</string>
    <string name="dishes">Dania</string>
    <string name="deserts">Desery</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="reset">Reset</string>
    <string name="interrupt">Przerwij</string>
    <string name="ingredients">Składniki</string>
    <string name="method">Sposób przygotowania</string>
    <string name="home_tab">Start</string>
    <string name="kat1_tab">Dania</string>
    <string name="kat2_tab">Desery</string>
    <string name="image_title">Tytuł obrazka</string>
    <string name="user_name"> Android Studio </string>
    <string name="user_mail"> android.studio@android.com </string>
    <string name="drawer_random">Losowy przepis</string>
    <string name="open_drawer">Otwórz szufladę nawigacyjną</string>
    <string name="close_drawer">Zamknij szufladę nawigacyjną</string>
    <string name="info_title">Książka kucharska</string>
    <string name="info_description">Aplikacja z przepisami kulinarnymi</string>
    <string name="info_authors">Autorzy:</string>
    <string name="info_mh">Mariusz Hybiak</string>
    <string name="info_mp">Maria Pietras</string>
    <string name="bowl">Miska</string>
    <string name="cloud">Chmurka</string>
    <string name="meatball">Pulpet</string>
    <string name="cookbook">CookBook</string>
</resources>