<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/ic_launcher_background"
    android:orientation="vertical"
    tools:context=".AnimationFragment">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">



        <ImageView
            android:id="@+id/bowl"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_gravity="bottom|center_horizontal"
            android:src="@drawable/bowl"
            android:contentDescription="@string/bowl"/>

        <ImageView
            android:id="@+id/clouds"
            android:layout_width="200dp"
            android:layout_height="350dp"
            android:layout_gravity="bottom|center_horizontal"
            android:rotation="-4"
            android:src="@drawable/cloud"
            android:contentDescription="@string/cloud"
            />

        <ImageView
            android:id="@+id/meatball"
            android:layout_width="200dp"
            android:layout_height="530dp"
            android:layout_gravity="bottom|center_horizontal"
            android:rotation="-4"
            android:src="@drawable/meatball"
            android:alpha="0.0"
            android:contentDescription="@string/meatball"
            />

    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="2">

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|top"
            android:alpha="0"
            android:elegantTextHeight="false"
            android:text="@string/cookbook"
            android:fontFamily="@font/caveat"
            android:textColor="#000000"
            android:gravity="center"
            android:textSize="64sp"
            android:textStyle="bold" />
    </FrameLayout>

</LinearLayout>